# exercicio-curso-fastapi-do-zero

./: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json  pgadmin-servers.json
.github/workflows/: check-commit.yml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrate/: env.py
migrate/versions/: a060688d18a5_.py  a539c6ed914b_.py  a5d0fbdc7fca_.py  d997786b1504_.py
scripts/: init-devcontainer.sh  run-with-migrate.sh
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py  utils.py
