[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fast-zero"
version = "0.0.0"
description = "Código do curso FastAPI do Zero"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.111"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["fast_zero", "tests"]
extend-exclude = ["migrations"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
addopts = "--strict-config --cov-report=term-missing --no-cov-on-fail --cov=fast_zero"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
